add: material validation
